--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "himanshu gautam",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "bcrypt": "^1.0.2",
+    "express": "^4.15.2",
+    "mongoose-validators": "^0.1.0"
   }
 }
