--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.3.0",
     "mongoose-validators": "^0.1.0"
   }
 }
